--- a/eit.conf
+++ b/eit.conf
@@ -1,6 +1,7 @@
 # rename this file to EIT.yml and put a ':' in front of 'name' if
 # you want to use YAML like in old versions of Catalyst
 name EIT
+default_view	TT
 
 <Model::NHT>
 	default_year	2009
