--- a/blib/lib/EIT/eit.conf
+++ b/blib/lib/EIT/eit.conf
@@ -1,3 +1,20 @@
 # rename this file to EIT.yml and put a ':' in front of 'name' if
 # you want to use YAML like in old versions of Catalyst
 name EIT
+default_view	TT
+
+<Model::NHT>
+	default_year	2010
+	<years>
+#		<2008>		
+#		  xlogfile	/home/gamache/Code/EIT/scores.xlogfile.2008
+#			debug		1
+#		</2008>
+		<2010>
+		  xlogfile	/home/gamache/sites/EIT2010/scores.xlogfile.2010
+			xlogfile_url http://nethack.devnull.net/tournament/scores.xlogfile
+			debug		1
+		</2010>	
+	</years>
+</Model::NHT>
+
