--- a/eit.conf
+++ b/eit.conf
@@ -4,13 +4,13 @@ name EIT
 default_view	TT
 
 <Model::NHT>
-	default_year	2012
+	default_year	2017
 	<years>
-		<2012>
-		  xlogfile	/home/gamache/sites/EIT2012/scores.xlogfile.2012
-			xlogfile_url http://nethack.devnull.net/tournament/scores.xlogfile
+		<2017>
+		  xlogfile	/home/gamache/sites/EIT2017/scores.xlogfile.2017
+      xlogfile_url https://www.hardfought.org/devnull/xlogfiles/xlogfile.dnt
 			debug		1
-		</2012>	
+		</2017>	
 	</years>
 </Model::NHT>
 
